# llm-thorn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_layer.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  security.yml
benchmarks/: redco_eval.py  redteam_eval.py  runner.py
benchmarks/datasets/: README.md
docker/: Dockerfile
docs/: adding-a-backend.md  architecture.md  index.md  policy-reference.md  quickstart.md  writing-a-layer.md
docs/backends/: anthropic.md  ollama.md  openai.md
llm_thorn/: __init__.py  cli.py  middleware.py  sdk.py  templates.py
llm_thorn/backends/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
llm_thorn/core/: __init__.py  audit.py  models.py  pipeline.py  proxy.py  session.py
llm_thorn/layers/: __init__.py  base.py  context.py  heuristic.py  output.py  safety.py  semantic.py
llm_thorn/policy/: __init__.py  engine.py  schema.py
plugins/example/: README.md  __init__.py  layer.py
policies/: README.md  coding-assistant.yaml  customer-support.yaml  fintech.yaml  healthcare.yaml
tests/: conftest.py
tests/adversarial/: test_adversarial.py
tests/adversarial/samples/: attacks.json
tests/integration/: test_full_pipeline.py  test_proxy_openai.py
tests/unit/: test_audit_log.py  test_cli.py  test_context_layer.py  test_heuristic_layer.py  test_output_layer.py  test_policy_engine.py  test_safety_layer.py  test_semantic_layer.py
thorn/: __init__.py  cli.py  middleware.py  sdk.py
thorn/backends/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
thorn/core/: __init__.py  audit.py  pipeline.py  proxy.py
thorn/layers/: __init__.py  base.py  context.py  heuristic.py  output.py  semantic.py
thorn/policy/: __init__.py  engine.py  schema.py
