[project]
name = "thorn"
version = "0.1.0"
description = "Runtime semantic security layer for LLM-powered applications. The WAF for the AI era."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Thorn Contributors" }]
keywords = [
    "llm",
    "security",
    "prompt-injection",
    "jailbreak",
    "waf",
    "ai-security",
    "firewall",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.25"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "openai>=1.30",
]

[project.scripts]
thorn = "thorn.cli:app"

[project.urls]
Homepage = "https://github.com/kirtanpatel2003/thorn"
Documentation = "https://github.com/kirtanpatel2003/thorn/tree/main/docs"
Repository = "https://github.com/kirtanpatel2003/thorn"
Issues = "https://github.com/kirtanpatel2003/thorn/issues"
Changelog = "https://github.com/kirtanpatel2003/thorn/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thorn"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["benchmarks/results"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:thorn.*"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
