[project]
name = "llm-thorn"
dynamic = ["version"]
description = "Runtime semantic security layer for LLM-powered applications. The WAF for the AI era."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Thorn Contributors" }]
keywords = [
    "llm",
    "security",
    "prompt-injection",
    "jailbreak",
    "waf",
    "ai-security",
    "firewall",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
openai = ["openai>=2.43.0"]
anthropic = ["anthropic>=0.111.0"]
# Observability: trace evaluation runs and Ollama calls with Laminar.
# Optional — only the red-team eval harness uses it, never the core stack.
laminar = ["lmnr>=0.7.54"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.18",
    "openai>=2.43.0",
]

[project.scripts]
llm-thorn = "llm_thorn.cli:app"

[project.urls]
Homepage = "https://github.com/kirtanpatel2003/llm-thorn"
Documentation = "https://github.com/kirtanpatel2003/llm-thorn/tree/main/docs"
Repository = "https://github.com/kirtanpatel2003/llm-thorn"
Issues = "https://github.com/kirtanpatel2003/llm-thorn/issues"
Changelog = "https://github.com/kirtanpatel2003/llm-thorn/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: read __version__ from the package
# so pyproject.toml and llm_thorn/__init__.py can never drift apart.
[tool.hatch.version]
path = "llm_thorn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["llm_thorn"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["benchmarks/results"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:llm_thorn.*"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
